Initial changes to create a staging installation under build dir
Adjust the output directory of binary and library CMake targets to
create an installation tree under "${CMAKE_BINARY_DIR}/darkradiant",
with the aim of allowing the built application to be directly run from
within an IDE without requiring a separate "make install" step.

The main binary and modules/plugins are moved to the new location, but
the staged installation is not yet runnable because resources from the
"install" directory are not yet being copied in.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,13 @@ configure_file(config.h.in config.h)
 add_compile_definitions(HAVE_CONFIG_H)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
+# Set up a usable installation tree within the binary dir so developers don't
+# have to install to a temporary location
+set(DR_STAGING_LIBDIR "${CMAKE_BINARY_DIR}/darkradiant/lib/darkradiant")
+set(DR_STAGING_MODULESDIR "${DR_STAGING_LIBDIR}/modules")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/darkradiant/bin")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_LIBDIR}")
+
 # Supporting libraries
 add_subdirectory(libs/math)
 add_subdirectory(libs/xmlutil)
