--- a/plugins/sound/CMakeLists.txt
+++ b/plugins/sound/CMakeLists.txt
@@ -4,3 +4,6 @@ add_library(sound MODULE
             SoundPlayer.cpp
             SoundShader.cpp)
 target_link_libraries(sound PUBLIC wxutil ${AL_LIBRARIES} ${VORBIS_LIBRARIES})
+set_target_properties(
+    sound PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_MODULESDIR}"
+)
