--- a/plugins/dm.editing/CMakeLists.txt
+++ b/plugins/dm.editing/CMakeLists.txt
@@ -16,3 +16,6 @@ add_library(dm_editing MODULE
             ReadmeTxt.cpp)
 target_compile_options(dm_editing PUBLIC ${SIGC_CFLAGS})
 target_link_libraries(dm_editing PUBLIC wxutil)
+set_target_properties(
+    dm_editing PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_MODULESDIR}"
+)
