--- a/plugins/vcs/CMakeLists.txt
+++ b/plugins/vcs/CMakeLists.txt
@@ -4,3 +4,6 @@ add_library(vcs MODULE
             Repository.cpp
             ui/VcsStatus.cpp)
 target_link_libraries(vcs PUBLIC wxutil ${LIBGIT_LIBRARIES})
+set_target_properties(
+    vcs PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_MODULESDIR}"
+)
