--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,9 +89,11 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 # Set up a usable installation tree within the binary dir so developers don't
 # have to install to a temporary location
-set(DR_STAGING_LIBDIR "${CMAKE_BINARY_DIR}/darkradiant/lib/darkradiant")
+set(DR_STAGING_ROOT "${CMAKE_BINARY_DIR}/darkradiant")
+set(DR_STAGING_LIBDIR "${DR_STAGING_ROOT}/lib/darkradiant")
 set(DR_STAGING_MODULESDIR "${DR_STAGING_LIBDIR}/modules")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/darkradiant/bin")
+set(DR_STAGING_DATADIR "${DR_STAGING_ROOT}/share/darkradiant")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${DR_STAGING_ROOT}/bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_LIBDIR}")
 
 # Supporting libraries
@@ -141,60 +143,5 @@ else()
     message(WARNING "asciidoctor not found; documentation will not be generated")
 endif()
 
-# Install main targets
-install(TARGETS darkradiant math xmlutil scene wxutil
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION ${PKGLIBDIR})
-install(TARGETS radiantcore script sound
-        LIBRARY DESTINATION ${PKGLIBDIR}/modules)
-
-# Install Dark Mod plugins
-if (${ENABLE_DM_PLUGINS})
-    install(TARGETS dm_stimresponse dm_objectives dm_difficulty dm_editing
-                    dm_gui dm_gameconnection dm_conversation
-            LIBRARY DESTINATION ${PKGLIBDIR}/plugins)
-endif()
-
-if (${LIBGIT_FOUND})
-    install(TARGETS vcs
-            LIBRARY DESTINATION ${PKGLIBDIR}/plugins)
-endif()
-
-# Generate and install the .desktop file
-configure_file(install/darkradiant.desktop.in install/darkradiant.desktop)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/install/darkradiant.desktop
-        DESTINATION ${CMAKE_INSTALL_DATADIR}/applications)
-
-# Install resources
-file(GLOB XML_FILES "${PROJECT_SOURCE_DIR}/install/*.xml")
-install(FILES ${XML_FILES} DESTINATION ${PKGDATADIR})
-
-install(DIRECTORY install/games DESTINATION ${PKGDATADIR})
-install(DIRECTORY install/bitmaps DESTINATION ${PKGDATADIR})
-install(DIRECTORY install/gl DESTINATION ${PKGDATADIR})
-install(DIRECTORY install/ui DESTINATION ${PKGDATADIR}
-        FILES_MATCHING PATTERN "*.ttf" PATTERN "*.xrc")
-install(DIRECTORY install/resources DESTINATION ${PKGDATADIR})
-
-install(FILES ${PROJECT_SOURCE_DIR}/install/bitmaps/darkradiant_icon_64x64.png
-        DESTINATION ${CMAKE_INSTALL_DATADIR}/icons/hicolor/64x64/apps
-        RENAME net.darkradiant.DarkRadiant.png)
-install(FILES ${PROJECT_SOURCE_DIR}/install/bitmaps/darkradiant_icon_128x128.png
-        DESTINATION ${CMAKE_INSTALL_DATADIR}/icons/hicolor/128x128/apps
-        RENAME net.darkradiant.DarkRadiant.png)
-install(FILES ${PROJECT_SOURCE_DIR}/install/net.darkradiant.DarkRadiant.metainfo.xml
-        DESTINATION ${CMAKE_INSTALL_DATADIR}/metainfo)
-
-# Install locale data
-if (${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14")
-# CMake 3.14 and above support TYPE LOCALE, they deduct DESTINATION themselves
-install(DIRECTORY install/i18n/de TYPE LOCALE
-        FILES_MATCHING PATTERN "*.mo")
-else()
-install(DIRECTORY install/i18n/de DESTINATION ${CMAKE_INSTALL_LOCALEDIR}
-        FILES_MATCHING PATTERN "*.mo")
-endif()
-
-# Install scripts
-install(DIRECTORY install/scripts DESTINATION ${PKGDATADIR}
-        FILES_MATCHING PATTERN "*.py")
+# Install targets
+include(install.cmake)
