VCS (Git) module is an optional plugin, not a core module
Unit tests now pass when run from the build directory, apart from one of
the OrthoViewSelectionTests which was already failing.

--- a/plugins/vcs/CMakeLists.txt
+++ b/plugins/vcs/CMakeLists.txt
@@ -5,5 +5,5 @@ add_library(vcs MODULE
             ui/VcsStatus.cpp)
 target_link_libraries(vcs PUBLIC wxutil ${LIBGIT_LIBRARIES})
 set_target_properties(
-    vcs PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_MODULESDIR}"
+    vcs PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${DR_STAGING_PLUGINSDIR}"
 )
