#5255: initial filters::FilterGroup class
This will store a set of filters to activate as a whole. Unit tests
confirm that it can be constructed from an xml::Node and read its name
and contents, although the new class is not yet used within the
application.

--- a/libs/scene/CMakeLists.txt
+++ b/libs/scene/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(scene
             EntityNode.cpp
             EntitySettings.cpp
             filters/SceneFilter.cpp
+            filters/FilterGroup.cpp
             KeyValueObserver.cpp
             LayerUsageBreakdown.cpp
             ModelFinder.cpp
