Move several shader-related classes to scene library
This moves NamedBindable, HeightmapCreator, and ShaderExpression.

--- a/libs/scene/CMakeLists.txt
+++ b/libs/scene/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(scene
             SelectableNode.cpp
             SelectionIndex.cpp
             ShaderParms.cpp
+            shaders/ShaderExpression.cpp
             textures/TextureManipulator.cpp
             TargetableNode.cpp
             TargetKey.cpp
