--- a/libs/wxutil/CMakeLists.txt
+++ b/libs/wxutil/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(wxutil
             ConsoleView.cpp
+            UIThemeManager.cpp
             dataview/DeclarationTreeView.cpp
             dataview/KeyValueTable.cpp
             dataview/ResourceTreeView.cpp
