--- a/radiant/CMakeLists.txt
+++ b/radiant/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(darkradiant
                selection/SelectionMouseTools.cpp
                settings/LocalisationModule.cpp
                settings/LocalisationProvider.cpp
+               settings/RenderingQualitySettings.cpp
                settings/Win32Registry.cpp
                textool/tools/TextureToolManipulateMouseTool.cpp
                textool/TexTool.cpp
