--- a/tools/msvc/include.vcxproj
+++ b/tools/msvc/include.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="..\..\include\GLProgramAttributes.h" />
     <ClInclude Include="..\..\include\i18n.h" />
     <ClInclude Include="..\..\include\iaasfile.h" />
+    <ClInclude Include="..\..\include\iarray.h" />
     <ClInclude Include="..\..\include\iarchive.h" />
     <ClInclude Include="..\..\include\iautosaver.h" />
     <ClInclude Include="..\..\include\ibrush.h" />
