--- a/tools/msvc/include.vcxproj.filters
+++ b/tools/msvc/include.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClInclude Include="..\..\include\i18n.h" />
     <ClInclude Include="..\..\include\iaasfile.h" />
     <ClInclude Include="..\..\include\iarchive.h" />
+    <ClInclude Include="..\..\include\iarray.h" />
     <ClInclude Include="..\..\include\iautosaver.h" />
     <ClInclude Include="..\..\include\ibrush.h" />
     <ClInclude Include="..\..\include\icameraview.h" />
